# plotlywaterfall

./: .gitignore  README.md  example.ipynb  pyproject.toml
examples/: examples.ipynb
src/plotly_waterfall/: waterfall.py
tests/: test_basic.py
